--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -1126,5 +1126,30 @@
     "Root": "Racine",
     "Videoconference": "Vid\u00e9oconf\u00e9rence",
     "Course settings": "Param\u00e8tres du cours",
-    "Course maintenance": "Maintenance du cours"
+    "Course maintenance": "Maintenance du cours",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "Envoi du fichier r\u00e9ussi !",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Choose recipients": "S\u00e9lectionnez les destinataires",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "L'importation du fichier de sauvegarde est termin\u00e9e",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "Importer toutes les sections contenues dans le fichier de sauvegarde",
+    "Let me select learning objects": "Me laisser s\u00e9lectionner les sections de cours."
 }
