--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -1008,5 +1008,29 @@
     "Sessions catalogue": "Sessions catalogue",
     "Videoconference": "Videokonference",
     "Course settings": "Kursa iestat\u012bjumi",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "Fails aug\u0161upiel\u0101d\u0113ts veiksm\u012bgi!",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "Import\u0113\u0161ana pabeigta",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "Import\u0113t visu rezerves kopijas saturu",
+    "Let me select learning objects": "\u013baujiet man izv\u0113l\u0113ties kursa pamatda\u013cas"
 }
