--- a/assets/locales/my_MM.json
+++ b/assets/locales/my_MM.json
@@ -1127,5 +1127,30 @@
     "Root": "\u1021\u1019\u103c\u1005\u103a",
     "Videoconference": "\u1017\u102e\u1012\u102e\u101a\u102d\u102f\u1000\u103d\u1014\u103a\u1016\u101b\u1004\u1037\u103a",
     "Course settings": "\u101e\u1004\u103a\u1010\u1014\u103a\u1038\u1006\u1000\u103a\u1010\u1004\u103a\u1019\u103b\u102c\u1038",
-    "Course maintenance": "\u101e\u1004\u103a\u1010\u1014\u103a\u1038\u1011\u102d\u1014\u103a\u1038\u101e\u102d\u1019\u103a\u1038\u1019\u103e\u102f"
+    "Course maintenance": "\u101e\u1004\u103a\u1010\u1014\u103a\u1038\u1011\u102d\u1014\u103a\u1038\u101e\u102d\u1019\u103a\u1038\u1019\u103e\u102f",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "\u1016\u102d\u102f\u1004\u103a\u1010\u1004\u103a\u101e\u103d\u1004\u103a\u1038\u1019\u103e\u102f \u1021\u1031\u102c\u1004\u103a\u1019\u103c\u1004\u103a\u1015\u102b\u101e\u100a\u103a!",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Choose recipients": "\u101c\u1000\u103a\u1001\u1036\u101e\u1030\u1019\u103b\u102c\u1038\u1000\u102d\u102f \u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1015\u102b",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "\u1010\u1004\u103a\u101e\u103d\u1004\u103a\u1038\u1019\u103e\u102f\u1015\u103c\u102e\u1038\u1005\u102e\u1038\u1015\u103c\u102e\u1038",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "\u1015\u103c\u100a\u1037\u103a\u1005\u102f\u1036\u101e\u1031\u102c \u1021\u101b\u1014\u103a\u101e\u102d\u1019\u103a\u1038\u1006\u100a\u103a\u1038\u1019\u103e\u102f\u1010\u1004\u103a\u101e\u103d\u1004\u103a\u1038\u1015\u102b",
+    "Let me select learning objects": "\u1000\u103b\u103d\u1014\u103a\u102f\u1015\u103a\u1021\u102c\u1038 \u101e\u1004\u103a\u101a\u1030\u1019\u103e\u102f\u1021\u101b\u102c\u101d\u1010\u1039\u1011\u102f\u1019\u103b\u102c\u1038\u1000\u102d\u102f \u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1001\u103d\u1004\u1037\u103a\u1015\u103c\u102f\u1015\u102b"
 }
