--- a/assets/locales/uk_UA.json
+++ b/assets/locales/uk_UA.json
@@ -743,5 +743,28 @@
     "Branding (logos)": "Branding (logos)",
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Sessions catalogue": "Sessions catalogue",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "\u0406\u043c\u043f\u043e\u0440\u0442 \u0437\u0430\u043a\u0456\u043d\u0447\u0435\u043d\u043e",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "\u0406\u043c\u043f\u043e\u0440\u0442\u0443\u0432\u0430\u0442\u0438 \u043f\u043e\u0432\u043d\u0443 \u0440\u0435\u0437\u0435\u0440\u0432\u043d\u0443 \u043a\u043e\u043f\u0456\u044e",
+    "Let me select learning objects": "\u0414\u043e\u0437\u0432\u043e\u043b\u044c\u0442\u0435 \u043c\u0435\u043d\u0456 \u0432\u0438\u0431\u0440\u0430\u0442\u0438 \u043a\u043e\u043c\u043f\u043e\u043d\u0435\u043d\u0442\u0438 \u043a\u0443\u0440\u0441\u0443"
 }
