--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -881,5 +881,29 @@
     "Updated": "\u66f4\u65b0",
     "Sessions catalogue": "Sessions catalogue",
     "Course settings": "\u8bfe\u7a0b\u8bbe\u7f6e",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "\u6587\u4ef6\u4e0a\u4f20\u6210\u529f!",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "\u5bfc\u5165\u5b8c\u6210",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "\u5bfc\u5165\u5b8c\u5168\u5907\u4efd",
+    "Let me select learning objects": "\u9009\u62e9\u8bfe\u7a0b\u7ec4\u4ef6"
 }
