--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -1117,5 +1117,30 @@
     "Root": "\u0627\u0644\u0627\u0633\u0627\u0633",
     "Videoconference": "\u0645\u0624\u062a\u0645\u0631\u0627\u062a \u0627\u0644\u0641\u064a\u062f\u064a\u0648",
     "Course settings": "\u0627\u0639\u062f\u0627\u062f\u0627\u062a \u0627\u0644\u0645\u0642\u0631\u0631",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "\u062a\u0645 \u0631\u0641\u0639 \u0627\u0644\u0645\u0644\u0641 \u0628\u0646\u062c\u0627\u062d",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Choose recipients": "\u0627\u062e\u062a\u064a\u0627\u0631 \u0627\u0644\u0645\u0633\u062a\u0644\u0645\u064a\u0646 \u0627\u0644\u0645\u0633\u062a\u0647\u062f\u0641\u064a\u0646",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": " \u0627\u0646\u062a\u0647\u062a \u0639\u0645\u0644\u064a\u0629 \u0627\u0644\u0625\u0633\u062a\u0631\u0627\u062f",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": " \u0627\u0633\u062a\u0631\u0627\u062f \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0625\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0627\u0644\u0643\u0627\u0645\u0644\u0629",
+    "Let me select learning objects": " \u062f\u0639\u0646\u064a \u0627\u062d\u062f\u062f \u0645\u062d\u062a\u0648\u064a\u0627\u062a \u0627\u0644\u0645\u0642\u0631\u0631"
 }
