--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1126,5 +1126,30 @@
     "Root": "Ra\u00edz",
     "Videoconference": "Videoconferencia",
     "Course settings": "Configuraci\u00f3n del curso",
-    "Course maintenance": "Mantenimiento del curso"
+    "Course maintenance": "Mantenimiento del curso",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "\u00a1 El archivo ha sido enviado !",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Choose recipients": "Elegir destinatarios",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "Importaci\u00f3n finalizada",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "Importar una copia de seguridad completa",
+    "Let me select learning objects": "Seleccionar los componentes del curso"
 }
