--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -966,5 +966,29 @@
     "Root": "\u0631\u0648\u062a",
     "Videoconference": "\u0648\u06cc\u062f\u06cc\u0648 \u06a9\u0646\u0641\u0631\u0627\u0646\u0633",
     "Course settings": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u062f\u0631\u0633",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "\u0641\u0627\u06cc\u0644 \u0628\u0627 \u0645\u0648\u0641\u0642\u06cc\u062a \u0622\u067e\u0644\u0648\u062f \u06af\u0631\u062f\u06cc\u062f",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "\u0648\u0627\u0631\u062f \u06a9\u0631\u062f\u0646 \u0627\u0637\u0644\u0627\u0639\u0627\u062a \u0641\u0627\u06cc\u0644 \u067e\u0634\u062a\u06cc\u0628\u0627\u0646\u06cc \u0627\u0646\u062c\u0627\u0645 \u06af\u0631\u062f\u06cc\u062f",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "\u0648\u0627\u0631\u062f \u06a9\u0631\u062f\u0646 \u062a\u0645\u0627\u0645\u06cc \u0627\u0637\u0644\u0627\u0639\u0627\u062a \u0641\u0627\u06cc\u0644 \u067e\u0634\u062a\u06cc\u0628\u0627\u0646\u06cc",
+    "Let me select learning objects": "\u0628\u062e\u0634\u0647\u0627\u06cc \u0627\u06cc\u0646 \u062f\u0631\u0633 \u0631\u0627 \u062e\u0648\u062f \u0645\u0634\u062e\u0635 \u062e\u0648\u0627\u0647\u0645 \u06a9\u0631\u062f"
 }
