--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -1105,5 +1105,30 @@
     "Root": "\u05e9\u05d5\u05e8\u05e9",
     "Videoconference": "\u05d5\u05e2\u05d9\u05d3\u05ea \u05d5\u05d9\u05d3\u05d0\u05d5",
     "Course settings": "\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05e7\u05d5\u05e8\u05e1",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "\u05d4\u05e2\u05dc\u05d0\u05ea \u05d4\u05e7\u05d5\u05d1\u05e5 \u05d4\u05e6\u05dc\u05d9\u05d7\u05d4!",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Choose recipients": "\u05d1\u05d7\u05e8 \u05e0\u05de\u05e2\u05e0\u05d9\u05dd",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "\u05d4\u05d9\u05d1\u05d5\u05d0 \u05d4\u05e1\u05ea\u05d9\u05d9\u05dd",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "\u05d9\u05d9\u05d1\u05d0 \u05d2\u05d9\u05d1\u05d5\u05d9 \u05de\u05dc\u05d0",
+    "Let me select learning objects": "\u05ea\u05df \u05dc\u05d9 \u05dc\u05d1\u05d7\u05d5\u05e8 \u05d0\u05d5\u05d1\u05d9\u05d9\u05e7\u05d8\u05d9 \u05dc\u05de\u05d9\u05d3\u05d4"
 }
