--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -1025,5 +1025,29 @@
     "Sessions catalogue": "Sessions catalogue",
     "Videoconference": "Wideokonferencja",
     "Course settings": "Ustawienia kursu",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "File upload succeeded!": "Za\u0142adowanie pliku powiod\u0142o si\u0119!",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Import finished": "Import zako\u0144czony",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "Importuj pe\u0142n\u0105 kopi\u0119 zapasow\u0105",
+    "Let me select learning objects": "Wyb\u00f3r element\u00f3w kursu, kt\u00f3re b\u0119d\u0105 uwzgl\u0119dnione w kopii zapasowej"
 }
