--- a/assets/locales/tl_PH.json
+++ b/assets/locales/tl_PH.json
@@ -773,5 +773,27 @@
     "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.": "Upload optional header and email logos. The SVG format is preferred. PNG is used as fallback.",
     "Sessions catalogue": "Sessions catalogue",
     "Course settings": "Mga setting ng kurso",
-    "Course maintenance": "Course maintenance"
+    "Course maintenance": "Course maintenance",
+    "Open file": "Open file",
+    "Item details": "Item details",
+    "Uploading... please keep this tab open.": "Uploading... please keep this tab open.",
+    "Recipients": "Recipients",
+    "Enter a value here": "Enter a value here",
+    "Write a title...": "Write a title...",
+    "Use the editor toolbar to format your content.": "Use the editor toolbar to format your content.",
+    "Drag & drop files here or click to select": "Drag & drop files here or click to select",
+    "Edit post": "Edit post",
+    "New post": "New post",
+    "Failed to create the post. Please try again.": "Failed to create the post. Please try again.",
+    "Press Ctrl+Enter to send": "Press Ctrl+Enter to send",
+    "Add comment": "Add comment",
+    "Write your comment here...": "Write your comment here...",
+    "%d selected": "{0} selected",
+    "Search by title or path...": "Search by title or path...",
+    "Manage backups, restore, copy, recycle and delete course data.": "Manage backups, restore, copy, recycle and delete course data.",
+    "%d comment(s)": "{0} comment(s)",
+    "Error updating third party. Please verify the data.": "Error updating third party. Please verify the data.",
+    "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
+    "Import full backup": "I-import ang buong backup",
+    "Let me select learning objects": "Hayaan akong pumili ng mga bagay na mapag-aaralan"
 }
